# hivesrv

./: .gitignore  pyproject.toml  readme.md
src/: main.py
src/hive/: config.py  loops.py  signals.py
src/hive/servers/: base.py
src/hive/servers/tcp/: server.py  state.py
src/hive/servers/tcp/http/: http11.py
src/hive/telemetry/: logs.py
